2022-08-27T02:27:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937671639
* notice: last 14d: unq all: 13 31
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 295 466
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 303 477
* notice: prev exec diff / last date diff / accum: unq all: +8 +11 -0 -0 / +9 +12 -0 -0 / 9 12
* notice: removed / changed dates: [] / [2022-08-26]

2022-08-26T16:31:51Z:
* notice: last 14d: unq all: 7 20
* notice: prev accum: outdated-unq outdated-all / unq all: 274 434 / 291 460
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 295 466
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-12] / []

2022-08-26T08:28:52Z:
* notice: last 14d: unq all: 10 26
* notice: prev accum: outdated-unq outdated-all / unq all: 274 434 / 294 465
* notice: next accum: outdated-unq outdated-all / unq all: 274 434 / 291 460
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -4 -6 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-12 2022-08-26]

2022-08-25T16:31:10Z:
* notice: last 14d: unq all: 14 31
* notice: prev accum: outdated-unq outdated-all / unq all: 274 434 / 294 464
* notice: next accum: outdated-unq outdated-all / unq all: 274 434 / 294 465
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-25]

2022-08-25T08:29:41Z:
* notice: last 14d: unq all: 14 30
* notice: prev accum: outdated-unq outdated-all / unq all: 274 434 / 293 463
* notice: next accum: outdated-unq outdated-all / unq all: 274 434 / 294 464
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-25]

2022-08-25T02:27:17Z:
* notice: last 14d: unq all: 14 29