@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-27T02:27:28Z",
+  "timestamp" : "2022-08-27T08:27:27Z",
   "count_outdated" : 446,
   "uniques_outdated" : 282,
-  "count" : 477,
-  "uniques" : 303,
+  "count" : 478,
+  "uniques" : 304,
   "clones" : [
     {
       "timestamp": "2022-08-17T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 12 ],
       "uniques": 9,
       "uniques_minmax": [ 1, 9 ]
+    },
+    {
+      "timestamp": "2022-08-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
