@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 13,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 12,
       "uniques": 9
+    },
+    {
+      "timestamp": "2022-08-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
