@@ -1,3 +1,11 @@
+2022-08-27T08:27:27Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2938597426
+* notice: last 14d: unq all: 13 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 303 477
+* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 304 478
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-27]
+
 2022-08-27T02:27:28Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937671639
 * notice: last 14d: unq all: 13 31
